# Sidra-ibge-etl

./: .gitignore  README.md  pyproject.toml
csv/: abate_1092.csv  abate_1093.csv  abate_1094.csv  cnt_1620.csv  cnt_1621.csv  cnt_1846.csv  cnt_2072.csv  cnt_2205.csv  cnt_5932.csv  cnt_6612.csv  cnt_6613.csv  cnt_6726.csv  cnt_6727.csv  couro_1088.csv  couro_1089.csv  couro_1090.csv  estoque_254.csv  estoque_255.csv  estoque_259.csv  estoque_278.csv  estoque_5459.csv  estoque_5470.csv  estoque_911.csv  estoque_912.csv  inpc_1736.csv  ipca_118.csv  ipca_1737.csv  ipca_6691.csv  ipca_quinze_3065.csv  ipp_6723.csv  ipp_6903.csv  ipp_6904.csv  leite_1086.csv  ovo_7524.csv  pim_pf_br_8885.csv  pim_pf_br_8886.csv  pim_pf_br_8889.csv  pim_pf_rg_8888.csv  pmc_8883.csv  pms_8163.csv  (+99 more)
notebooks/abates/: abate_1092.ipynb  abate_1093.ipynb  abate_1094.ipynb
src/: main.py
src/app/: main.py
src/domain/: __init__.py
src/domain/constants/: __init__.py  abate.py  couro.py  leite.py  links.py  ovos.py  producao_agricola.py
src/domain/constants/links/: abate.py  couro.py  industria.py  ipca.py  leite.py  ovos.py  pesquisa_domicilios.py  pesquisas.py  producao_agricola.py  sinapi.py
src/infra/http/: __init__.py  fetch.py
src/infra/services/extract/: __init__.py  async_extractor.py  link_generator.py  link_validator.py
src/pipeline/: __init__.py  extract.py  orquestrator.py
src/pipeline/extract/: sidra.py
src/settings/: logger.py
