[project]
name = "sidra-ibge-etl"
version = "0.1.0"
description = "Pipeline ETL para extração, transformação e carga de dados do SIDRA/IBGE"
authors = [
  { name = "André Luiz" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]
